fix css issues on mobile

--- a/src/theme/pagination.css
+++ b/src/theme/pagination.css
@@ -25,7 +25,7 @@
 }
 
 .page-item.disabled > .page-link {
-  color: #2b6684;
+  color: #5387a1;
   cursor: default;
 }
 
